fixed css so that scrollbar is not visible

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,15 @@ body {
   font-family: "Roboto Mono", monospace;
   margin: 0;
   padding: 0;
+
+  overflow: scroll;
+  overflow-x: hidden;
 }
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
 
 /* .card {
   background-color: #fff;
